--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Multiverso stark</h1>
-<image src="stark.png">
+<image src="stark/docs/assets/stark.png">
 
 ![Book logo](stark/docs/assets/stark.png)
